--- a/PlanningCenterSchedule/package.json
+++ b/PlanningCenterSchedule/package.json
@@ -35,12 +35,16 @@
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.2.1",
     "json-loader": "0.5.4",
+    "moment": "^2.19.1",
     "preboot": "4.5.2",
+    "randomcolor": "^0.5.3",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.2",
     "style-loader": "0.18.2",
+    "tinycolor2": "^1.4.1",
     "to-string-loader": "1.1.5",
+    "treecolors": "^0.1.2",
     "typescript": "2.4.1",
     "url-loader": "0.5.9",
     "webpack": "2.5.1",
@@ -51,6 +55,8 @@
   "devDependencies": {
     "@types/chai": "4.0.1",
     "@types/jasmine": "2.5.53",
+    "@types/randomcolor": "^0.4.3",
+    "@types/tinycolor2": "^1.4.0",
     "chai": "4.0.2",
     "jasmine-core": "2.6.4",
     "karma": "1.7.0",
