--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/PlanningCenterSchedule/Data/data.json
+/PlanningCenterSchedule/Data/AccessList.txt
+/PlanningCenterSchedule/wwwroot/images/favicon.png
