Overhaul to PCO API client library, introducing much stronger typing and service discovery.

--- a/PlanningCenterApi/PlanningCenterApi.csproj
+++ b/PlanningCenterApi/PlanningCenterApi.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JsonApiSerializer" Version="1.0.0" />
+    <PackageReference Include="RestSharp.NetCore" Version="105.2.4-rc4-24214-01" />
+  </ItemGroup>
+
 </Project>
